[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fourdfpy"
version = "0.0.2"
authors = [
	{ name="Joey Scanga", email="joeyscanga92@gmail.com" },
	{ name="Ramone Agard", email="ramone.agard@gmail.com" },
]
description = "A simple package for converting a 4dfp brain image into a Numpy array."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/washu-seal2/fourdfpy"
Issues = "https://github.com/washu-seal2/fourdfpy/issues"

